# lensref

./: .gitignore  LICENSE  LensRef.hs  MLens.hs  README.md  TODO  changelog  lensref.cabal  runperftest.hs  runtests.hs
Lens/: Common.hs
LensRef/: Fast.hs  Pure.hs  Test.hs
MLens/: Ref.hs
docs/: DotPlugin.hs  Introduction.pandoc  Makefile
src/: Demo.hs
src/Control/Lens/: Simple.hs
src/Data/: LensRef.hs
src/Data/LensRef/: Arbitrary.hs  Class.hs  Common.hs  Default.hs  Fast.hs  Pure.hs  PureTime.hs  Test.hs  TestEnv.hs
